--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <!DOCTYPE html>
 <html>
     <head>
+
         <title>Currulum Vitae</title>
-        <script src="script.js"></script>
-        <link href="style.css" rel="stylesheet">
+        <!-- initialisation de page -->
         <meta charset="utf-8"> 
+
+        <!-- style de page -->
+        <link href="style.css" rel="stylesheet">
+
+        <!-- import script -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+
+        <!-- script de page -->
+        <script src="script.js"></script>
+
     </head>
     <body>
         <header>
