--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <!-- import script -->
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
+        <script type="text/javascript">
+            (function(){
+                emailjs.init({ publicKey: "UH2k-274wOM005RNe",});
+            })();
+        </script>
         <!-- script de page -->
         <script src="script.js"></script>
 
