--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <script type="text/javascript">
             (function(){
-                emailjs.init({ publicKey: "UH2k-274wOM005RNe", privateKey: "Lpj7KrAcrBNJoFjRUyIlx"});
+                emailjs.init({ publicKey: "UH2k-274wOM005RNe"});
             })();
         </script>
         <!-- script de page -->
