--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <script type="text/javascript">
             (function(){
-                emailjs.init({ publicKey: "UH2k-274wOM005RNe"});
+                emailjs.init('UH2k-274wOM005RNe');
             })();
         </script>
         <!-- script de page -->
