--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         <link href="style.css" rel="stylesheet">
 
         <!-- import script -->
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+        <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js'></script>
+        <script type='text/javascript'>emailjs.init('ICl1Gr-2iThwXuBMD')</script>
 
         <!-- script de page -->
-        <script src="script.js"></script>
+        <script async src="script.js"></script>
 
     </head>
     <body>
@@ -41,3 +42,5 @@
         </footer>
     </body>
 </html>
+
+  
