--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
         </header>
         <main id="main">
-
+            Bienvenue sur mon portfolio !
         </main>
         <footer>
             <h6>MICHAEL LIENHART - LM - 2023</h6>
