--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
         <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js'></script>
         <!--<script type='text/javascript'>emailjs.init('ICl1Gr-2iThwXuBMD')</script>-->
         <script type='text/javascript'>emailjs.init('2vIDqXlVWi6E9KQ15')</script>
+        <script type="text/javascript">
+            (function() {
+            // https://dashboard.emailjs.com/admin/account
+                emailjs.init({
+                  publicKey: "YOUR_PUBLIC_KEY",
+                });
+            })();
+        </script>
         <!-- script de page -->
         <script async src="script.js"></script>
 
