--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             (function() {
             // https://dashboard.emailjs.com/admin/account
                 emailjs.init({
-                  publicKey: "YOUR_PUBLIC_KEY",
+                  publicKey: "2vIDqXlVWi6E9KQ15",
                 });
             })();
         </script>
